# ActiveTAG

./: .gitignore  CMakeLists.txt  README.md  build.cmd  package-portable.ps1  test.cmd  version.json
deploy/: Check-Dependencies.ps1  README.txt  Run-Dependency-Check.cmd
docs/releases/: v0.2.0.md  v0.2.1.md  v0.3.0.md  v0.3.1.md  v0.4.0.md  v0.4.1.md  v0.4.2.md  v0.4.3.md  v0.4.4.md  v0.4.5.md  v0.5.0.md  v0.5.1.md  v0.5.10.md  v0.5.2.md  v0.5.3.md  v0.5.4.md  v0.5.5.md  v0.5.6.md  v0.5.7.md  v0.5.8.md  v0.5.9.md  v0.6.0.md  v0.6.1.md  v0.6.2.md  v0.6.3.md  v0.6.4.md
src/: active_tag.cpp  active_tag.hpp  main.cpp  main_imgui.cpp  serial_port.cpp  serial_port.hpp
test/: native_tests.cpp
tools/: Generate-Banner.ps1  Generate-Icon.ps1  Prepare-Build.ps1
